switch to row oriented

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Vue templates-->
   <template id="instances-template">
-    <div class="row" id="instances">
+    <div class="row row-centered" id="instances">
       <instance-component v-for="(instance, index) in instances" :instance="instance" :index="index">
       </instance-component>
     </div>
