--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,85 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <link rel="icon" href="/favicon.ico">
 
-<head>
-  <title>PCFS Demo</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <link href="/css/demo.css" rel="stylesheet">
-  <script>
-  </script>
-</head>
+    <title>PCFS Node.js Demo</title>
 
-<body>
-  <!-- Vue templates-->
-  <template id="instances-template">
-    <div class="row" id="instances">
-      <instance-component v-for="(instance, index) in instances" :instance="instance" :index="index">
-      </instance-component>
-    </div>
-  </template>
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-  <template id="instance-template">
-    <div class="card">
-      <img v-if="thisInstance" :src="'holder.js/100px280?text=index:' + index +  '&theme=lava'">
-      <img v-else :src="'holder.js/100px280?text=index:' + index +  '&theme=' + theme">
-      <p class="card-text" v-if="thisInstance">
-        <a :href="'/killme?id=' + instance">kill me</a>
+    <!-- Custom styles  -->
+    <link href="css/demo.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <!-- Vue templates-->
+    <template id="instances-template">
+      <div class="row expander" id="instances">
+        <instance-component v-for="(instance, index) in instances" :instance="instance" :index="index">
+        </instance-component>
+      </div>
+    </template>
+
+    <template id="instance-template">
+      <div class="col-md-4 col-sm-6 col-xs-12 text-center">
+        <img :src="'holder.js/100px280?text=' + index +  '&theme=' + theme">
+        <p v-if="thisInstance" class="line-50">
+          <a :href="'/killme?id=' + instance">kill me</a>
+        </p>
+        <p v-else class="line-50">id: {{ instance }}</p>
+      </div>
+    </template>
+    <!-- End Vue templates-->
+
+    <!-- navbar -->
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <span class="navbar-brand">Pivotal Cloud Foundry Services</span>
+        </div>
+      </div>
+    </nav>
+
+    <!-- content -->
+    <div class="container expander" id="app">
+      <h1>{{ applicationName }} <small>app id: {{ applicationId }}</small>
+      </h1>
+      <p v-if="redis" class="lead">
+        Redis is <strong>enabled</strong>. Below is an array of instances, you are viewing instance <strong>{{ instanceIndex }}</strong>.
       </p>
-      <p class="card-text" v-else>id: {{ instance }}</p>
-    </div>
-  </template>
-  <!-- End Vue templates-->
-
-  <section class="jumbotron text-xs-center">
-    <div class="container">
-      <img src="/img/cloud_rings.png" alt="Pivotal Cloud Foundry">
-      <h1 class="jumbotron-heading">Pivotal Cloud Foundry</h1>
-      <h2 class="jumbotron-heading">Node.js Demo</h2>
-      <p class="lead text-muted">
-        Below is an array of instances behind this application
-        <br />(the specific instance you are hitting is <span style="color:rgb(246,101,44)">orange</span>)
+      <p v-else class="lead">
+        Redis is <strong>disabled</strong>.
       </p>
-    </div>
-  </section>
 
-  <div :class="'album text-muted bg-' + theme" id="app">
-    <div class="container">
       <instances-component :instances="instances"></instances-component>
-    </div>
-  </div>
 
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-xs-right">
-        <a href="#">Back to top</a>
-      </p>
-      <p>&copy; PCFS 2017</p>
-    </div>
-  </footer>
+      <!-- footer -->
+      <div class="row footer line-50">
+        <div class="col-xs-12 col-sm-6 text-left">
+          <p class="text-muted">instance id: {{ instanceId }}</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 text-right">
+          <p class="text-muted">&copy; PCFS 2017</p>
+        </div>
+      </div>
 
-  <!-- core JavaScript
- ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    </div> <!-- /app -->
+
+  <!-- yavascripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
   <script src="/js/vendor/holder.min.js"></script>
   <script>
@@ -93,7 +110,7 @@
         // compare this instance (which is an id) with global instanceId
         // and set theme to 'lava' if they match
         theme: function() {
-          return this.instance === globalInstance.instanceId ? 'lava' : globalInstance.theme;
+          return this.instance === globalInstance.instanceId ? globalInstance.theme : 'gray';
         },
         thisInstance: function() {
           return this.instance === globalInstance.instanceId;
@@ -106,6 +123,7 @@
       data: globalInstance
     });
   </script>
+
 </body>
 
 </html>
