--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <h1>{{ applicationName }} <small>app id: {{ applicationId }}</small>
       </h1>
       <p v-if="redis" class="lead">
-        Redis is <strong>enabled</strong>. Below is an array of instances, you are viewing instance <strong>{{ instanceIndex }}</strong>.
+        Redis is <strong>enabled</strong>. The instances behind the app are below, you are viewing instance <strong>{{ instanceIndex }}</strong>.
       </p>
       <p v-else class="lead">
         Redis is <strong>disabled</strong>.
