--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- do this here so the page only loads after ajax call -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script>
+      var globalInstance = {};
+
+      // get info synchronously for Vue
+      $.ajax({
+        url: '/info',
+        type: 'get',
+        dataType: 'json',
+        async: false,
+        success: function(data) {
+          globalInstance = data;
+        }
+      });
+    </script>
   </head>
 
   <body>
@@ -78,24 +95,10 @@
     </div> <!-- /app -->
 
   <!-- yavascripts-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
   <script src="/js/vendor/holder.min.js"></script>
   <script>
-    var globalInstance = {};
-
-    // get info synchronously for Vue
-    $.ajax({
-      url: '/info',
-      type: 'get',
-      dataType: 'json',
-      async: false,
-      success: function(data) {
-        globalInstance = data;
-      }
-    });
-
     //instances component
     Vue.component('instances-component', {
       template: '#instances-template',
