--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     </div> <!-- /app -->
 
   <!-- yavascripts-->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="/js/vendor/vue.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
   <script src="/js/vendor/holder.min.js"></script>
   <script>
